--- a/style.css
+++ b/style.css
@@ -165,4 +165,15 @@ h2 {
     align-items: center;
 }
 
+p {
+    white-space: normal;
+    word-wrap: break-word;
+    overflow: break-word;
+    line-height: 1.6;
+}
 
+.news-desc {
+    width: 90%;
+    margin: 0 auto;
+    word-wrap: break-word;
+}
