--- a/style.css
+++ b/style.css
@@ -64,11 +64,12 @@ h1 {
     list-style-type: none;
     justify-content: center;
     flex-wrap: wrap;
-    font-size: 20px;
+    font-size: 15px;
     padding: 20px 10px;
     background: rgb(105, 112, 26);
     width: 100vw;
-    gap: 10px;
+    gap: 20px;
+    margin-top: 5px;
     
 }
 
@@ -81,6 +82,7 @@ h1 {
     border-radius: 12px;
     border: 3px solid rgb(11, 219, 28);
     background: white;
+    gap: 10px;
     transition: 0.3s;
     box-shadow: 0px 4px 6px rgba(0,0,0,0.1);
 }
